--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm -- migration:generate -d ormconfig.js",
+    "migration:run": "npm run typeorm -- migration:run -d ormconfig.js",
+    "migration:revert": "npm run typeorm -- migration:revert -d ormconfig.js",
     "seed": "ts-node -r tsconfig-paths/register src/seeder.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
