--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,14 +13,16 @@ stages:
       - job: deps
         steps:
           - task: NodeTool@0
-            displayName: 'Use Node.js LTS'
+            displayName: 'Use Node.js 18.x'
             inputs:
-              versionSpec: 'lts'       # or '18.x' / '16.x'
-              checkLatest: true 
+              versionSpec: '18.x'
+              checkLatest: true
+
           - script: |
               cd backend
               npm ci
             displayName: 'Install backend dependencies'
+
           - script: |
               cd frontend
               npm ci
@@ -35,15 +37,18 @@ stages:
               npm run lint    # will report errors *and* warnings
             displayName: 'Lint backend (warnings won’t fail)'
             continueOnError: true
+
           - script: |
               cd backend
               npm run test
             displayName: 'Test backend'
+
           - script: |
               cd frontend
               npm run lint
             displayName: 'Lint frontend (warnings won’t fail)'
             continueOnError: true
+
           - script: |
               cd frontend
               npm run test
@@ -57,11 +62,14 @@ stages:
               cd backend
               npm run build
             displayName: 'Build backend'
+
           - script: |
               cd frontend
               npm run build
             displayName: 'Build frontend'
+
           - publish: backend/dist
             artifact: backend-dist
+
           - publish: frontend/dist
             artifact: frontend-dist
