--- a/backend/package.json
+++ b/backend/package.json
@@ -31,21 +31,19 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "eslint": "^9.18.0",
+    "jest": "^29.7.0",
     "mysql2": "^3.14.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.24",
-    "jest": "^29.7.0",
-    "eslint": "^9.18.0",
-    "typescript": "^5.7.3",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0"
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -65,8 +63,10 @@
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   }
 }
