--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ stages:
 
           - script: |
               cd backend
-              npm ci
+              npm ci --include=dev
             displayName: 'Install backend dependencies'
 
           - script: |
