fix problem with install dependencies

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ stages:
 
           - script: |
               cd backend
-              npm ci --include=dev
+              npm install
             displayName: 'Install backend dependencies'
 
           - script: |
