--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,22 @@ trigger:
   branches:
     include:
       - main
-      - develop
+      - de             - script: |
+              cd frontend
+              npm ci
+            displayName: "Install frontend dependencies"
 
-pool:
+  - stage: Build|
+              cd frontend
+              npm run lint
+            displayName: "Lint frontend (warnings won't fail)"
+            continueOnError: true
+            condition: and(succeeded(), or(eq(variables['Build.SourceBranch'], 'refs/heads/main'), eq(variables['Build.SourceBranch'], 'refs/heads/develop')))
+
+          - script: |
+              cd frontend
+              echo "Frontend tests not configured yet - skipping"
+            displayName: "Test frontend (placeholder)"ool:
   vmImage: "ubuntu-latest"
 
 stages:
