--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,22 +2,13 @@ trigger:
   branches:
     include:
       - main
-      - de             - script: |
-              cd frontend
-              npm ci
-            displayName: "Install frontend dependencies"
 
-  - stage: Build|
-              cd frontend
-              npm run lint
-            displayName: "Lint frontend (warnings won't fail)"
-            continueOnError: true
-            condition: and(succeeded(), or(eq(variables['Build.SourceBranch'], 'refs/heads/main'), eq(variables['Build.SourceBranch'], 'refs/heads/develop')))
+pr:
+  branches:
+    include:
+      - main
 
-          - script: |
-              cd frontend
-              echo "Frontend tests not configured yet - skipping"
-            displayName: "Test frontend (placeholder)"ool:
+pool:
   vmImage: "ubuntu-latest"
 
 stages:
@@ -58,8 +49,8 @@ stages:
 
           - script: |
               cd backend
-              npm run lint    # will report errors *and* warnings
-            displayName: "Lint backend (warnings won’t fail)"
+              npm run lint
+            displayName: "Lint backend (warnings won't fail)"
             continueOnError: true
 
           - script: |
@@ -71,17 +62,6 @@ stages:
               cd frontend
               npm ci
             displayName: "Install frontend dependencies"
-
-          - script: |
-              cd frontend
-              npm run lint
-            displayName: "Lint frontend (warnings won’t fail)"
-            continueOnError: true
-
-          - script: |
-              cd frontend
-              npm run test
-            displayName: "Test frontend"
 
   - stage: Build
     jobs:
