--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "migration:run": "npm run typeorm -- migration:run -d ormconfig.js",
     "migration:revert": "npm run typeorm -- migration:revert -d ormconfig.js",
     "seed": "ts-node -r tsconfig-paths/register src/seeder.ts",
+    "seed:comprehensive": "ts-node -r tsconfig-paths/register src/comprehensive-seeder.ts",
+    "seed:verify": "ts-node -r tsconfig-paths/register src/verify-seeder.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
