--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@vueuse/core": "^13.5.0",
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
+    "sass": "^1.89.2",
+    "vite-plugin-vuetify": "^2.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
