--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
+variables:
+  - group: GITHUB_TOKEN
+
 trigger:
   branches:
     include:
@@ -98,3 +101,10 @@ stages:
 
           - publish: frontend/dist
             artifact: frontend-dist
+
+          - script: |
+              git config --global user.email "damianzieba999@gmail.com"
+              git config --global user.name "Damian526"
+              git remote add github https://github.com/Damian526/cinema-reservation-app
+              git push github HEAD:main
+            displayName: "Mirror to GitHub"
