--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,6 +105,6 @@ stages:
           - script: |
               git config --global user.email "damianzieba999@gmail.com"
               git config --global user.name "Damian526"
-              git remote add github https://github.com/Damian526/cinema-reservation-app
+              git remote add github https://Damian526:$(GITHUB_TOKEN)@github.com/Damian526/cinema-reservation-app.git
               git push github HEAD:main
             displayName: "Mirror to GitHub"
