--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,5 +106,5 @@ stages:
               git config --global user.email "damianzieba999@gmail.com"
               git config --global user.name "Damian526"
               git remote add github https://Damian526:$(GITHUB_TOKEN)@github.com/Damian526/cinema-reservation-app.git
-              git push github HEAD:main
+              git push github HEAD:main --force
             displayName: "Mirror to GitHub"
