--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,9 @@
     "eslint": "^9.18.0",
     "jest": "^29.7.0",
     "mysql2": "^3.14.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "ts-node": "^10.9.2",
